--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -58,7 +58,7 @@ jobs:
           sudo -E apt-get -y autoremove --purge
           sudo -E apt-get clean
           
-     - name: 自定义插件主题。
+      - name: makescripe
         run: |
           cd package
           mkdir openwrt-packages
