--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -58,14 +58,14 @@ jobs:
           sudo -E apt-get -y autoremove --purge
           sudo -E apt-get clean
           
-      - name: makescripe
-        run: |
-          cd package
-          mkdir openwrt-packages
-          cd openwrt-packages
-          git clone https://github.com/openwrt-develop/luci-theme-atmaterial.git
-          git clone https://github.com/Ameykyl/luci-app-koolproxyR
-          git clone https://github.com/rosywrt/luci-theme-rosy
+      #- name: makescripe
+      #  run: |
+      #    cd package
+      #    mkdir openwrt-packages
+      #    cd openwrt-packages
+      #    git clone https://github.com/openwrt-develop/luci-theme-atmaterial.git
+      #    git clone https://github.com/Ameykyl/luci-app-koolproxyR
+      #    git clone https://github.com/rosywrt/luci-theme-rosy
           
       - name: Update feeds
         run: |
@@ -163,14 +163,14 @@ jobs:
           CONFIG_PACKAGE_luci-app-webadmin=y
           CONFIG_PACKAGE_luci-app-wireguard=y
           CONFIG_PACKAGE_luci-app-wrtbwmon=y
-          CONFIG_PACKAGE_luci-app-koolproxyR=y
+          #CONFIG_PACKAGE_luci-app-koolproxyR=y
           EOF
           # LuCI主题:
           cat >> .config <<EOF
           CONFIG_PACKAGE_luci-theme-argon=y
           CONFIG_PACKAGE_luci-theme-netgear=y
-          CONFIG_PACKAGE_luci-theme-atmaterial=y
-          CONFIG_PACKAGE_luci-theme-rosy=y
+          #CONFIG_PACKAGE_luci-theme-atmaterial=y
+          #CONFIG_PACKAGE_luci-theme-rosy=y
           EOF
           # 常用软件包:
           cat >> .config <<EOF
